Fix and enhance book management: - Add soft-delete (archive) functionality - Implement ArchiveList view with restore, edit, and delete actions - Update Index view with Archive and View Archived buttons - Ensure correct ViewModel (BookListView) is used throughout - Fix Edit and Details views to match expected models

--- a/MIDTERM_E1_BSIT31E1_Villafuerte/MIDTERM_E1_BSIT31E1_Villafuerte.csproj
+++ b/MIDTERM_E1_BSIT31E1_Villafuerte/MIDTERM_E1_BSIT31E1_Villafuerte.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="Views\Book\ArchiveList.cshtml" />
+  </ItemGroup>
+
 </Project>
